# dodo-is-api-library

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
dodo_is_api_library/: __init__.py  dodo_is_api.py
dodo_is_api_library/api_sections/: __init__.py
dodo_is_api_library/api_sections/auth/: auth.py  oauth.py
dodo_is_api_library/api_sections/core/: core.py
dodo_is_api_library/api_sections/core/subsections/: accounting.py  organization_structure.py  staff.py  units.py
dodo_is_api_library/api_sections/marketplace/: marketplace.py
dodo_is_api_library/api_sections/marketplace/subsections/: franchisee.py
dodo_is_api_library/utils/: converter.py  exceptions.py  http_client.py  scopes.py  validators.py
