[project]
name = "dodo-is-api-library"
version = "0.1.0"
description = "API client for DodoIS"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "anyio~=4.9",
    "httpx~=0.28"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
